[gd_scene load_steps=6 format=3 uid="uid://cn6knnbou4yvu"]

[ext_resource type="Script" uid="uid://dj8ux6iye8y5h" path="res://Entities/UI Elements/player_hud.gd" id="1_0diws"]
[ext_resource type="Texture2D" uid="uid://uuumgpo3hdxq" path="res://Assets/UI Textures/Bullet.png" id="2_0diws"]
[ext_resource type="Texture2D" uid="uid://b65wl04kvi616" path="res://Assets/UI Textures/Rocket.png" id="3_rcd2r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rcd2r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nqk8j"]
bg_color = Color(1, 0.18, 0.18, 1)

[node name="PlayerHUD" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0diws")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerName" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Player 1"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -51.0
offset_right = 100.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("2_0diws")
expand_mode = 1
stretch_mode = 5

[node name="AmmoBullets" type="Label" parent="Panel/HBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = 32.0
offset_right = 31.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
text = "100/200"

[node name="TextureRect2" type="TextureRect" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("3_rcd2r")
expand_mode = 1
stretch_mode = 5

[node name="AmmoRockets" type="Label" parent="Panel/HBoxContainer/TextureRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = 32.0
offset_right = 31.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
text = "100/200"

[node name="Money" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -34.0
offset_right = 20.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
text = "500$"

[node name="ProgressBar" type="ProgressBar" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -34.0
offset_right = 74.0
offset_bottom = -7.0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_rcd2r")
theme_override_styles/fill = SubResource("StyleBoxFlat_nqk8j")
step = 1.0
value = 50.0
